add Main page endpoints (without testing)
